# rust-web-slideshow

./: Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: app.rs  logger.rs  main.rs
backend/src/app/: slides.rs
backend/src/util/rocket/: cors.rs
dioxus-app/: Cargo.toml  Dioxus.toml
dioxus-app/src/: app.rs  main.rs  style.rs  use_case.rs  util.rs
dioxus-app/src/app/: slideshow.rs
dioxus-app/src/app/component/: button.rs
dioxus-app/src/app/slideshow/: navigation.rs  slide.rs  slide_number.rs
dioxus-app/src/use_case/: use_slides.rs
dioxus-app/src/util/http/: client.rs
front/: Cargo.toml
front/src/http/: client.rs  response.rs
sdk/: Cargo.toml
sdk/src/: http.rs  lib.rs  slide.rs
sdk/src/http/: client.rs  headers.rs  request.rs  response.rs
sycamore-app/: Cargo.toml  index.html
sycamore-app/src/: app.rs  main.rs
