[package]
name = "dioxus-app"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
dioxus = "0.3.1"
dioxus-web = "0.3.1"
js-sys = "0.3.61"
log = { version = "0.4.14", features = ["release_max_level_info"] }
sdk = { version = "0.1.0", path = "../sdk" }
stylist = { version = "0.12.0", features = ["parser"] }
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
wasm-logger = "0.2.0"

[dependencies.web-sys]
version = "0.3.61"
features = [
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
]
