[package]
name = "front"
version = "0.1.0"
edition = "2021"

[dependencies]
sdk = { version = "0.1.0", path = "../sdk" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
wasm-logger = "0.2.0"
js-sys = "0.3.61"

[dependencies.web-sys]
version = "0.3.61"
features = [
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
]
