[package]
edition = "2021"
name = "sycamore-app"
version = "0.1.0"

[dependencies]
async-trait = "0.1"
front = {version = "0.1.0", path = "../front"}
js-sys = "0.3.61"
log = {version = "0.4.14", features = ["release_max_level_info"]}
sdk = {version = "0.1.0", path = "../sdk"}
stylist = {version = "0.12.0", features = ["parser"]}
sycamore = {version = "0.8", features = ["suspense"]}
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
wasm-logger = "0.2.0"

[dependencies.web-sys]
features = [
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
]
version = "0.3.61"
